--- a/1-node-farm/templates/template-card.html
+++ b/1-node-farm/templates/template-card.html
@@ -6,13 +6,17 @@
     </div>
 
     <div class="card__details">
-        <div class="card__detail-box">
-            <h6 class="card__detail card__detail--organic {%NOT_ORGANIC%}"></h6>
+        <div class="card__detail-box {%NOT_ORGANIC%}">
+            <h6 class="card__detail card__detail--organic">Organic!</h6>
         </div>
 
         <div class="card__detail-box">
             <h6 class="card__detail">{%QUANTITY%} per 📦</h6>
         </div>
+
+<!--        <div class="card__detail-box">-->
+<!--            <h6 class="card__detail card__detail&#45;&#45;organic">Organic</h6>-->
+<!--        </div>-->
 
         <div class="card__detail-box">
             <h6 class="card__detail card__detail--price">{%PRICE%}€</h6>
